# inbound-carrier-sales-poc

./: .gitignore  GOAL.md  README.md  azure.yaml
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/app/: config.py  db.py  main.py  models.py  schemas.py
api/app/routers/: calls.py  loads.py  metrics.py  offers.py  verify.py
api/app/seed/: loads_seed.json  seeder.py
api/app/services/: fmcsa.py  negotiation.py
api/tests/: conftest.py  test_endpoints.py  test_negotiation.py  test_smoke_deployed.py
dashboard/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  main.tsx  styles.css
dashboard/src/components/: CallsTable.tsx  Card.tsx  CarrierBreakdown.tsx  FunnelCard.tsx  HeaderControls.tsx  Kpis.tsx  LaneMap.tsx  LanguageMenu.tsx  MoneyStrip.tsx  OutcomeChart.tsx  RangeFilter.tsx  RateCard.tsx  SentimentChart.tsx  TrendChart.tsx
dashboard/src/geo/: cities.ts
dashboard/src/i18n/: index.ts
dashboard/src/i18n/locales/: de.json  en.json  gsw.json
dashboard/src/theme/: ThemeProvider.tsx
docs/: acme-build-description.md  demo-call-script.md  email-carlos.md
infra/: main.bicep  main.parameters.json  resources.bicep
infra/scripts/: ensure-app-registration.sh
platform/: agent_prompt.md  extract_schema.md  tools.md
